--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_HOSTNAME=127.0.0.1
-MONGO_PORT=27017
-MONGO_DB=library
+JWT_ACCESS_SECRET=secret
+JWT_REFRESH_SECRET=secret
+DB_URL=mongodb+srv://Istamal:new87and@cluster0.zyzuhkc.mongodb.net/?retryWrites=true&w=majority
